--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-force-graph": "^1.44.5",
+    "react-force-graph-3d": "^1.24.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
