--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b 2Dv2 -d build"
+    "deploy": "gh-pages -d build -b gh-pages -r https://github.com/axrblk/mycelialnet-g.git -m 'Deploy 2Dv2' -p /2Dv2"
   },
   "eslintConfig": {
     "extends": [
