--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mycelialnet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://axrblk.github.io/mycelialnet-g",
+  "homepage": "https://axrblk.github.io/mycelialnet-g/2Dv2",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
