--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mycelialnet",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://axrblk.github.io/mycelialnet-g/2Dv2",
+  "homepage": "https://axrblk.github.io/mycelialnet-g/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -b gh-pages -r https://github.com/AXRBLK/mycelialnet-g.git -m 'Deploy 2Dv2' -p /2Dv2"
+    "deploy": "gh-pages -d build -b 2Dv2 -m 'Deploy 2Dv2'"
   },
   "eslintConfig": {
     "extends": [
