--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -b gh-pages -r https://github.com/AXRBLK/mycelialnet-g.git -m 'Deploy 3D' -p /3D"
+    "deploy": "gh-pages -d build -b 3D -m 'Deploy 3D'"
   },
   "eslintConfig": {
     "extends": [
