--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -b 3D -m 'Deploy 3D'"
+    "deploy": "gh-pages -d build -b gh-pages -p /3D"
     
   },
   "eslintConfig": {
